--- a/style.css
+++ b/style.css
@@ -31,46 +31,100 @@ ul{
     gap: 100px;
 }
 
+main{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
 #portada{
     display: flex;
     justify-content: space-around;
-   
-    background-color: rgb(229, 226, 226);
+    padding: 70px, 0px;
+    margin-top: 30px;
+    background-color:  #2cbaf6;
 
 }
+
 .card_info{
-    display: flex;
     background-color: white;
-    width: 1200px;
-    margin-left: 50px;
-    margin-right: 50px;
 
 }
-
-.card{
+.card_info h1{
+    font-weight: 700;
+    font-size: 40px;
     display: flex;
     flex-direction: column;
+}
+
+.card_info p{
+    margin-top: 30px;
+    margin-left: 50px;
+    font-weight: 300;
+    font-size: 16px;
+    max-width: 350px;
+
+}
+
+.card_btns{
+    display: flex;
+    gap:15px;
+    margin-top: 30px;
+    
+}
+
+.card_btns a{
+    text-decoration: none;
+    border: 3px solid black;
+    border-radius: 20px;
+    padding: 8px 15px ;
+    font-size: 14px;
+    font-weight: 600;
+}
+
+.btn-primary{
+    background-color: black;
+    color: white;
+    border-radius: 30px;
+    height: 30px;
+    width: fit-content;
+    margin-left: 120px;
+}
+.btn-secondary{
     background-color: white;
-    width: 300px;
-    height: 300px;
+    color: black;
+    border-radius: 10px;
+    margin-left: 50px;
+    
+}
+
+
+.portada-img{
+    display: flex;
+    display: flow-root;;
+    width: 475px;
       
 }
 
 #productos_servicios{
     display: flex;
     justify-content: space-around;   
-    background-color: rgb(229, 226, 226);
+    background-color:  #2cbaf6;
 
 }
 
 .card_prod_servicios{
     display: flex;
     align-items: center;
-    background-color: white;
     width: 1200px;
     height: 200px;
+    margin-bottom: 10px;
     margin-left: 50px;
     margin-right: 50px;
+    font-size: 25px;
+    color: white;
+    
 
 }
 
